--- a/task2_Maze/maze.css
+++ b/task2_Maze/maze.css
@@ -10,3 +10,7 @@
     background-color: #b2141a;
     background-size: 90%;
 }
+.jumbotron{
+    background-color:#87CEFA;
+    text-align:center;
+}
