--- a/task2_Maze/maze.css
+++ b/task2_Maze/maze.css
@@ -11,6 +11,6 @@
     background-size: 90%;
 }
 .jumbotron{
-    background-color:#aae7fa;
+    background-image:url(bkgd.PNG);
     text-align:center;
 }
